--- a/css/reset.css
+++ b/css/reset.css
@@ -1,92 +1,21 @@
-html
-{
-    /*background: #FFFFFF none repeat scroll 0 0;*/
-    color: #333;
-    overflow-y: scroll;
-	width:100%;
-    height:100%;
-}
-body, div, td
-{
-    line-height: 1.4em;
-}
-body, div, ul, li, h1, h2, h3, h4, h5, h6, form, fieldset, legend, input, textarea, p, th, td, dl, dt, dd
-{
-    margin: 0;
-    padding: 0;
-    font-size:12px;
-    font-weight:normal;
-    font-family: verdana;
-}
-table
-{
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-img
-{
-    border: 0 none;
-}
-address, caption, cite, code, dfn, em, th, var
-{
-    font-style: normal;
-    font-weight: normal;
-}
-ul li
-{
-    list-style-image: none;
-    list-style-position: outside;
-    list-style-type: none;
-}
-caption, th
-{
-    text-align: left;
-}
-h1, h2, h3, h4, h5, h6
-{
-    vertical-align: baseline;
-    zoom: 1;
-}
-input, textarea, select, button
-{
-    font-weight: inherit;
-    font-family: inherit;
-    font-size: inherit;
-}
-button
-{
-    border: none;
-    padding: 0;
-}
-button::-moz-focus-inner{
-    border: none;
-}
-input[type=radio], input[type=checkbox]
-{
-    vertical-align: middle;
-}
+html {color:#333;overflow-y:scroll;width:100%;height:100%;}
+body,div,td {line-height:1.4em;}
+body,div,ul,li,h1,h2,h3,h4,h5,h6,form,fieldset,legend,input,textarea,p,th,td,dl,dt,dd {margin:0;padding:0;font-size:12px;font-weight:normal;font-family:verdana;}
+table {border-collapse:collapse;border-spacing:0;}
+img {border:0 none;}
+address,caption,cite,code,dfn,em,th,var {font-style:normal;font-weight:normal;}
+ul li {list-style-image:none;list-style-position:outside;list-style-type:none;}
+caption,th {text-align:left;}
+h1,h2,h3,h4,h5,h6 {vertical-align:baseline;zoom:1;}
+input,textarea,select,button {font-weight:inherit;font-family:inherit;font-size:inherit;}
+button {border:none;padding:0;}
+button::-moz-focus-inner {border:none;}
+input[type=radio],input[type=checkbox] {vertical-align:middle;}
 input.checkbox {vertical-align:middle;}
-* html input
-{
-    vertical-align: baseline;
-}
-textarea
-{
-    overflow: auto;
-}
-a:focus
-{
-    outline-style: none;
-    outline-width: 0;
-}
-ul:after
-{
-    clear: both;
-    content: "";
-    display: block;
-    height: 0;
-    visibility: hidden;
-}
+* html input {vertical-align:baseline;}
+textarea {overflow:auto;}
+a:focus {outline-style:none;outline-width:0;}
+ul:after {clear:both;content:"";display:block;height:0;visibility:hidden;}
 
-
-
+.clear {content:"\0020";display:block;height:0;clear:both;visibility:hidden;}
+.clearfix:after,.clearfix:before {clear:both;content:'\0020';display:block;visibility:hidden;width:0;height:0;}
